--- a/README
+++ b/README
@@ -1,5 +1,24 @@
 just teaching myself Vala + Genie and OpenGL
 
-see also:
+see also: http://live.gnome.org/Vala/OpenGLSamples
 
-  http://live.gnome.org/Vala/OpenGLSamples
+installing on Ubuntu 11.10 64-bit
+
+# install vala
+
+    sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 7DAAC99C
+    sudo add-apt-repository ppa:vala-team
+    sudo apt-get update
+    sudo apt-get install valac
+
+# install opengl development libraries
+
+    sudo apt-get install libglfw-dev libgl1-mesa-dev libglu1-mesa-dev libxrandr-dev
+
+# clone
+
+    git clone git@github.com:mikesmullin/Vala-Genie-OpenGL.git .
+
+# compile and execute example
+
+    make
